--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-# LubovDenisenko.github.io
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Getting Started with TaxDome Help Center</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div class="contentWrapper">
+        <h1>Getting started with TaxDome Help Center</h1>
+        <p>
+            In <a href="https://help.taxdome.com/" target="_blank">
+                the Help Center</a>, you can find detailed articles that explain how to navigate the system, explore its
+            features, and quickly find answers to any questions you may have.
+
+        </p>
+
+        <h2>How to find the article you need</h2>
+        <p>On the Help Center’s homepage, you can search for information in two ways:</p>
+        <h3>1. With a search bar</h3>
+        <p>If you already know what you are looking for, type a few keywords into the search field. Then choose from the
+            list the article you need.</p>
+
+        <h3>2. Within folders</h3>
+        <p>If you are not sure how to phrase your search or just want to explore the platform, choose a folder that
+            interests you. Then open it and select an article from the list inside.</p>
+        <img src="img/TaxdomePic1.jpg" alt="Help Center Main page">
+
+        <h2>How to navigate an article page</h2>
+        <ul>
+            <li><strong>The article text (1)</strong> is in the center. It often includes images, videos, and links to
+                other helpful materials to give a comprehensive understanding of the topic.</li>
+            <li><strong>A list of article subheadings (2)</strong> is on the right side. You can click on one of them to
+                jump straight to the topic instead of reading the entire material.</li>
+            <li><strong>A list of folders and the search bar (3)</strong> are on the left. Use them to move to other
+                articles. </li>
+        </ul>
+
+        <img src="img/TaxdomePic2.jpg" alt="Article page">
+        <ul>
+            <li><strong>Links to related materials (4)</strong> sometimes appear at the bottom of the page, suggesting
+                additional helpful resources.</li>
+            <li><strong>Feedback panel (5)</strong> is also at the bottom, it lets you rate the article. </li>
+        </ul>
+
+        <img src="img/TaxdomePic3.jpg" alt="Article page bottom">
+
+        <h2>Where to begin</h2>
+        <p>To make your first interactions with TaxDome easier, you can start by reading the following articles:</p>
+        <ul>
+            <li>
+                <a href="https://help.taxdome.com/article/97-your-first-week-with-taxdome" target="_blank">
+                    TaxDome beginner's guide
+                </a> — a quick overview of basic features and first steps for new users.
+            </li>
+            <li>
+                <a href="https://help.taxdome.com/article/281-all-the-ways-to-get-help-and-tech-support"
+                    target="_blank">
+                    TaxDome learning resources
+                </a> — a list of resources to help you find more information about the platform.
+            </li>
+            <li>
+                <a href="https://help.taxdome.com/article/98-taxdome-dictionary" target="_blank">
+                    TaxDome Dictionary
+                </a> — a glossary of important terms to help you understand the language used throughout the platform,
+                especially useful for improving your searches.
+            </li>
+            <li>
+                <a href="https://help.taxdome.com/article/750-join-taxdome-community" target="_blank">
+                    Join TaxDome community
+                </a> — an article about our internal resource, where you can connect with other users, support and
+                development teams, and get access to exclusive articles.
+            </li>
+        </ul>
+    </div>
+</body>
+
+</html>
