--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Getting Started with TaxDome Help Center</title>
+    <title>Getting Started with the TaxDome Help Center</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="contentWrapper">
-        <h1>Getting started with TaxDome Help Center</h1>
+        <h1>Getting started with the TaxDome Help Center</h1>
         <p>
             In <a href="https://help.taxdome.com/" target="_blank">
                 the Help Center</a>, you can find detailed articles that explain how to navigate the system, explore its
