--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="img/TaxdomePic3.jpg" alt="Article page bottom">
 
         <h2>Where to begin</h2>
-        <p>To make your first interactions with TaxDome easier, you can start by reading the following articles:</p>
+        <p>You can start by reading the following articles to make your first interactions with TaxDome easier, :</p>
         <ul>
             <li>
                 <a href="https://help.taxdome.com/article/97-your-first-week-with-taxdome" target="_blank">
@@ -71,7 +71,7 @@
                 <a href="https://help.taxdome.com/article/750-join-taxdome-community" target="_blank">
                     Join TaxDome community
                 </a> — an article about our internal resource, where you can connect with other users, support and
-                development teams, and get access to exclusive articles.
+                development teams, and get access to exclusive information.
             </li>
         </ul>
     </div>
