--- a/index.html
+++ b/index.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
-    <title>Getting Started with the TaxDome Help Center</title>
-    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Капибары-пираты и Ускользающая гора</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="contentWrapper">
-        <h1>Getting started with the TaxDome Help Center</h1>
-        <p>
-            In <a href="https://help.taxdome.com/" target="_blank">
-                the Help Center</a>, you can find detailed articles that explain how to navigate the system, explore its
-            features, and quickly find answers to any questions you may have.
+    <div class="stars">
+        <div class="star">★</div>
+        <div class="star">★</div>
+        <div class="star">★</div>
+        <div class="star">★</div>
+        <div class="star">★</div>
+        <div class="star">★</div>
+    </div>
 
-        </p>
+    <div class="book-page">
+        <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
 
-        <h2>How to find the article you need</h2>
-        <p>On the Help Center’s homepage, you can search for information in two ways:</p>
-        <h3>1. With a search bar</h3>
-        <p>If you already know what you are looking for, type a few keywords into the search field. Then choose from the
-            list the article you need.</p>
+        <div class="illustration">
+            <img src="images/anton.jpg" alt="Антон-капибара" />
+        </div>
 
-        <h3>2. Within folders</h3>
-        <p>If you are not sure how to phrase your search or just want to explore the platform, choose a folder that
-            interests you. Then open it and select an article from the list inside.</p>
-        <img src="img/TaxdomePic1.jpg" alt="Help Center Main page">
+        <div class="page-content">
+            <p>Антон проснулся от того, что его качало. Но как-то необычно, совсем не так, как качает в электричке или
+                кресле-качалке. Антон открыл глаза и увидел деревянный потолок. «Странно, — подумал он, — и давно у меня
+                дома деревянный потолок?».</p>
 
-        <h2>How to navigate an article page</h2>
-        <ul>
-            <li><strong>The article text (1)</strong> is in the center. It often includes images, videos, and links to
-                other helpful materials to give a comprehensive understanding of the topic.</li>
-            <li><strong>A list of article subheadings (2)</strong> is on the right side. You can click on one of them to
-                jump straight to the topic instead of reading the entire material.</li>
-            <li><strong>A list of folders and the search bar (3)</strong> are on the left. Use them to move to other
-                articles. </li>
-        </ul>
+            <p>Он не успел как следует подумать эту мысль, как ему в глаза ударил яркий луч света. «Значит, эта дурацкая
+                лампа на месте» — подумал Антон, лампу он забывал выключать с завидной регулярностью. Хоть что-то
+                остаётся
+                постоянным! Антон повернул голову к источнику света, но вместо лампы он увидел маленькое круглое оконце,
+                в
+                которое пробивались солнечные лучи, бойко отражающиеся от плещущихся волн. «Минуточку, — подумал Антон,
+                —
+                откуда это за моим окном взялись волны?» Но ответа на этот вопрос он не нашел.</p>
 
-        <img src="img/TaxdomePic2.jpg" alt="Article page">
-        <ul>
-            <li><strong>Links to related materials (4)</strong> sometimes appear at the bottom of the page, suggesting
-                additional helpful resources.</li>
-            <li><strong>Feedback panel (5)</strong> is also at the bottom, it lets you rate the article. </li>
-        </ul>
+            <p>На этом удивительные события только начинались. Антон попытался закрыться от света и увидел, что вся его
+                рука покрыта коротким жестким мехом, и на ней всего четыре когтистых пальца, между которыми
+                растягивались
+                перепонки. Если бы Антон был менее сонным, он бы не на шутку испугался. Но в полудреме все всегда менее
+                удивительно. «Если у меня такие мохнатые руки, что же случилось с моими ногами?» — продолжил логическую
+                цепочку Антон. Он перевел взгляд вниз и что бы вы могли подумать — там были две мохнатые лапы и не было
+                совершенно никаких штанов. «Ну и дела!» — от удивления Антон тут же перевернулся со спины на живот.
+                Сложно
+                было сказать, что удивило его больше: мех или отсутствие штанов.</p>
 
-        <img src="img/TaxdomePic3.jpg" alt="Article page bottom">
+            <p>Антон приземлился на четыре лапы и понял, что это поза была удобной как никогда. Его взгляд наткнулся на
+                начищенный до блеска серебряный поднос и он увидел четыре огромных зуба, черные бусинки-глазки,
+                каштановую
+                шерсть и невозмутимое выражение лица. Из блестящей глади подноса на него смотрела капибара. Вот
+                теперь-то он
+                точно проснулся.</p>
 
-        <h2>Where to begin</h2>
-        <p>You can start by reading the following articles to make your first interactions with TaxDome easier, :</p>
-        <ul>
-            <li>
-                <a href="https://help.taxdome.com/article/97-your-first-week-with-taxdome" target="_blank">
-                    TaxDome beginner's guide
-                </a> — a quick overview of basic features and first steps for new users.
-            </li>
-            <li>
-                <a href="https://help.taxdome.com/article/281-all-the-ways-to-get-help-and-tech-support"
-                    target="_blank">
-                    TaxDome learning resources
-                </a> — a list of resources to help you find more information about the platform.
-            </li>
-            <li>
-                <a href="https://help.taxdome.com/article/98-taxdome-dictionary" target="_blank">
-                    TaxDome Dictionary
-                </a> — a glossary of important terms to help you understand the language used throughout the platform,
-                especially useful for improving your searches.
-            </li>
-            <li>
-                <a href="https://help.taxdome.com/article/750-join-taxdome-community" target="_blank">
-                    Join TaxDome community
-                </a> — an article about our internal resource, where you can connect with other users, support and
-                development teams, and get access to exclusive information.
-            </li>
-        </ul>
+        </div>
+
+        <div class="navigation">
+            <button class="nav-button" disabled>← Предыдущая</button>
+            <div class="page-number">Страница 1/14</div>
+            <a href="page2.html" class="nav-button">Следующая →</a>
+        </div>
     </div>
 </body>
 
