--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Капибары-пираты и Ускользающая гора</title>
+    <title>Капибары-пираты</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,50 +19,21 @@
     </div>
 
     <div class="book-page">
-        <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
-
-        <div class="illustration">
-            <img src="images/anton.jpg" alt="Антон-капибара" />
-        </div>
+        <h1 class="page-title">Капибары-пираты!</h1>
 
         <div class="page-content">
-            <p>Антон проснулся от того, что его качало. Но как-то необычно, совсем не так, как качает в электричке или
-                кресле-качалке. Антон открыл глаза и увидел деревянный потолок. «Странно, — подумал он, — и давно у меня
-                дома деревянный потолок?».</p>
 
-            <p>Он не успел как следует подумать эту мысль, как ему в глаза ударил яркий луч света. «Значит, эта дурацкая
-                лампа на месте» — подумал Антон, лампу он забывал выключать с завидной регулярностью. Хоть что-то
-                остаётся
-                постоянным! Антон повернул голову к источнику света, но вместо лампы он увидел маленькое круглое оконце,
-                в
-                которое пробивались солнечные лучи, бойко отражающиеся от плещущихся волн. «Минуточку, — подумал Антон,
-                —
-                откуда это за моим окном взялись волны?» Но ответа на этот вопрос он не нашел.</p>
 
-            <p>На этом удивительные события только начинались. Антон попытался закрыться от света и увидел, что вся его
-                рука покрыта коротким жестким мехом, и на ней всего четыре когтистых пальца, между которыми
-                растягивались
-                перепонки. Если бы Антон был менее сонным, он бы не на шутку испугался. Но в полудреме все всегда менее
-                удивительно. «Если у меня такие мохнатые руки, что же случилось с моими ногами?» — продолжил логическую
-                цепочку Антон. Он перевел взгляд вниз и что бы вы могли подумать — там были две мохнатые лапы и не было
-                совершенно никаких штанов. «Ну и дела!» — от удивления Антон тут же перевернулся со спины на живот.
-                Сложно
-                было сказать, что удивило его больше: мех или отсутствие штанов.</p>
-
-            <p>Антон приземлился на четыре лапы и понял, что это поза была удобной как никогда. Его взгляд наткнулся на
-                начищенный до блеска серебряный поднос и он увидел четыре огромных зуба, черные бусинки-глазки,
-                каштановую
-                шерсть и невозмутимое выражение лица. Из блестящей глади подноса на него смотрела капибара. Вот
-                теперь-то он
-                точно проснулся.</p>
-
+            <ul class="story-list">
+                <li>
+                    <a class="story-link" href="./story1/page1.html">Капибары-пираты и Ускользающая гора</a>
+                </li>
+                <li>
+                    <a class="story-link" href="./story2/page1.html">Капибары-пираты и Община острова Черепа</a>
+                </li>
+            </ul>
         </div>
 
-        <div class="navigation">
-            <button class="nav-button" disabled>← Предыдущая</button>
-            <div class="page-number">Страница 1/14</div>
-            <a href="page2.html" class="nav-button">Следующая →</a>
-        </div>
     </div>
 </body>
 
