--- a/story1/page14.html
+++ b/story1/page14.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибары-пираты и Ускользающая гора</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
 
         <div class="illustration">
-            <img src="images/treasure.jpg" alt="сокровище" />
+            <img src="../images/story1/treasure.jpg" alt="сокровище" />
         </div>
 
         <div class="page-content">
@@ -84,7 +84,7 @@
         <div class="navigation">
             <a href="page13.html" class="nav-button">← Назад</a>
             <div class="page-number">14/14</div>
-            <a href="index.html" class="nav-button">В начало</a>
+            <a href="../index.html" class="nav-button">В начало</a>
         </div>
     </div>
 </body>
