--- a/story1/page4.html
+++ b/story1/page4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибары-пираты и Ускользающая гора</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
 
         <div class="illustration">
-            <img src="images/coffee.jpg" alt="кофе" />
+            <img src="../images/story1/coffee.jpg" alt="кофе" />
         </div>
 
 
@@ -80,7 +80,8 @@
                 что здесь делает этот скелет, но доктор не дал ему и слова пискнуть.</p>
 
             <div class="speech">
-                <p>Погодите, мой друг, я по вашим глазам вижу, что вам немедленно нужна чашечка крепкого кофе и пара
+                <p>Погодите, мой друг, я по вашим глазам вижу, что вам немедленно нужна чашечка крепкого кофе <a
+                        href="receipt.html" style="text-decoration: none; font-style: normal;">☕️</a> и пара
                     апельсинов. Все разговоры лучше вести на полный желудок, не так ли? Хо-хо-хо.</p>
             </div>
 
