--- a/story1/page12.html
+++ b/story1/page12.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибары-пираты и Ускользающая гора</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
 
         <div class="illustration">
-            <img src="images/baldezh.jpg" alt="балдеж" />
+            <img src="../images/story1/baldezh.jpg" alt="балдеж" />
         </div>
 
 
