--- a/story1/page2.html
+++ b/story1/page2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибары-пираты и Ускользающая гора</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="navigation">
-            <a href="index.html" class="nav-button">← Предыдущая</a>
+            <a href="page1.html" class="nav-button">← Предыдущая</a>
             <div class="page-number">Страница 2/14</div>
             <a href="page3.html" class="nav-button">Следующая →</a>
         </div>
