--- a/story1/page7.html
+++ b/story1/page7.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибары-пираты и Ускользающая гора</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="book-page">
         <h1 class="page-title">Капибары-пираты и Ускользающая гора</h1>
         <div class="illustration">
-            <img src="images/pines.jpg" alt="шишки" />
+            <img src="../images/story1/pines.jpg" alt="шишки" />
         </div>
 
 
